# bleur

./: Cargo.toml
.github/workflows/: test.yml
src/: error.rs  lib.rs  main.rs  manager.rs
src/execute/: task.rs
src/method/git/: mod.rs  provider.rs
src/schemes/: mod.rs
src/schemes/template/: apply.rs  mod.rs
src/schemes/template/prelude/: change.rs  mod.rs  move.rs  project.rs  variable.rs
src/template/: template.toml
